# Terminal-Spelling-Assistant

./: README.md  main.py  pyproject.toml  setup.py  showcase.wpem
src/cword/: __init__.py  __main__.py  cli.py
